feat(order,i18n,ui): service-first wording + order status row + LTR dates
* i18n (AR/EN): add `order_status`, `medical_supplies`; switch many copies from “item”→“service”, tweak “quantity”→“count/عدد”, “variations”→“service details”, improve search placeholders, rating labels, and misc phrasing.
* Order UI:

  * `OrderInfoWidget`: add explicit “Order Status” label with colored dot; show status/delivered-at; force LTR for timestamps.
  * `OrderViewWidget`, `OrderInfoWidget`, `HistoryItemWidget`: enforce LTR on date texts.
  * `OrderItemWidget`: relabel addons header to “Medical Supplies”.
* Minor: consistent provider/store wording in texts; no logic changes.

Notes: Backward compatible; only copy/UI adjustments.

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1,4 +1,5 @@
 {
+  "order_status": "Order Status",
   "order_processing_after_payment_confirmation": "Your order is being processed after payment confirmation",
   "landmark": "Landmark",
   "write_landmark": "Enter a nearby landmark",
@@ -70,7 +71,7 @@
   "history": "History",
   "clear_all": "Clear All",
   "suggestions": "Suggestions",
-  "item_name": "Item Name",
+  "item_name": "Service Name",
   "approximately": "Approximately",
   "results": "results",
   "filter": "Filter",
@@ -91,11 +92,12 @@
   "min": "min",
   "location": "Location",
   "description": "Description",
-  "quantity": "Quantity",
+  "quantity": "Count",
+  "medical_supplies": "Medical Supplies",
   "addons": "Addons",
   "total_amount": "Total Amount",
   "add_to_cart": "Add To Cart",
-  "item_added_to_cart": "Item added to cart",
+  "item_added_to_cart": "Service added to cart",
   "already_added_in_cart": "Already Added in Cart",
   "out_of_stock": "Out of Stock",
   "my_cart": "My Cart",
@@ -205,7 +207,7 @@
   "call": "Call",
   "order_details": "Order Details",
   "rate_and_review": "Rate & Review",
-  "rate_the_item": "Rate the Item",
+  "rate_the_item": "Rate the service",
   "rate_the_delivery_man": "Rate the Nurse",
   "share_your_opinion": "Share Your Opinion",
   "write_your_review_here": "Write your review here....",
@@ -442,8 +444,8 @@
   "max_size_2_mb": "Max size 2MB",
   "version_1.2": "Version 1.2",
   "no_parcel_category_data_found": "No parcel category data found",
-  "search_item_in_store": "Search item in office...",
-  "write_item_name": "Write item name",
+  "search_item_in_store": "Search service in office...",
+  "write_item_name": "Write service name",
   "view_more": "View More",
   "news_letter": "NEWS LETTER",
   "subscribe_to_out_new_channel_to_get_latest_updates": "Subscribe to our news letter to get latest updates",
@@ -834,7 +836,7 @@
   "your_food_will_delivered_within": "Your order will complete within",
   "general_info": "General Info",
   "order_date": "Order date",
-  "item_info": "Item Info",
+  "item_info": "Service Info",
   "hey_welcome_back": "Hey Welcome Back!",
   "which_location_do_you_want_to_select": "Which location do you want to select?",
   "use_current_location": "Use my current location",
@@ -845,7 +847,7 @@
   "driving_license_number": "Driving license number",
   "nid_number": "NID number",
   "estimated_delivery_time": "Estimated Delivery Time",
-  "this_item_will_be_shown_in_the_user_app_website": "This item will be shown in the user app & website",
+  "this_item_will_be_shown_in_the_user_app_website": "This service will be shown in the user app & website",
   "joined": "Joined",
   "how_it_works": "How it works ?",
   "you_dont_have_any_saved_address_yet": "You don’t have any saved address yet. please save address or use your current location",
@@ -861,7 +863,7 @@
   "need_cutlery": "Need Cutlery",
   "no_need_cutlery": "No Need Cutlery",
   "delivery_instruction": "Delivery Instruction",
-  "unavailable_item_note": "Unavailable Item Note",
+  "unavailable_item_note": "Unavailable Service Note",
   "delivery_man_information": "Nurse Information",
   "points_it_will_add_to": "points, it will add to your loyalty after complete the order",
   "6_character": "8+ character",
