--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1,4 +1,5 @@
 {
+  "order_status": "حالة الطلب",
   "order_processing_after_payment_confirmation": "جاري تنفيذ طلبك بعد تأكيد حالة الدفع",
   "landmark": "علامة مميزة",
   "write_landmark": "أدخل علامة مميزة قريبة",
@@ -68,7 +69,7 @@
   "history": "السجل",
   "clear_all": "مسح الكل",
   "suggestions": "اقتراحات",
-  "item_name": "اسم العنصر",
+  "item_name": "اسم الخدمة",
   "approximately": "تقريبًا",
   "results": "نتائج",
   "filter": "فلتر",
@@ -89,11 +90,12 @@
   "min": "دقيقة",
   "location": "موقع",
   "description": "وصف",
-  "quantity": "كمية",
+  "quantity": "عدد",
+  "medical_supplies": "مستلزمات طبية",
   "addons": "إضافات",
   "total_amount": "المبلغ الإجمالي",
   "add_to_cart": "أضف إلى سلة الطلبات",
-  "item_added_to_cart": "تمت إضافة العنصر إلى سلة الطلبات",
+  "item_added_to_cart": "تمت إضافة الخدمة إلى سلة الطلبات",
   "already_added_in_cart": "تمت إضافتها بالفعل في سلة الطلبات",
   "out_of_stock": "إنتهى من المخزن",
   "my_cart": "سلة الطلبات الخاصة بي",
@@ -203,7 +205,7 @@
   "call": "اتصل",
   "order_details": "تفاصيل الطلب",
   "rate_and_review": "تقيم ومراجعة",
-  "rate_the_item": "قيم العنصر",
+  "rate_the_item": "قيم الخدمة",
   "rate_the_delivery_man": "قيم موظف",
   "share_your_opinion": "شارك برأيك",
   "write_your_review_here": "أكتب رأيك هنا....",
@@ -294,7 +296,7 @@
   "additional_note": "ملاحظة إضافية",
   "no_suggestions_available": "لا توجد اقتراحات متاحة",
   "delivery_verification_code": "رمز التحقق من التسليم",
-  "variations": "الاختيارات المتاحة",
+  "variations": "تفاصيل الخدمة",
   "restaurant_details": "تفاصيل مقدم الخدمة",
   "store_details": "تفاصيل مقدم الخدمة",
   "direction": "اتجاه",
@@ -440,8 +442,8 @@
   "max_size_2_mb": "الحد الأقصى للحجم 2 ميجابايت",
   "version_1.2": "الإصدار 1.2",
   "no_parcel_category_data_found": "لم يتم العثور على بيانات فئة قطعة الأرض",
-  "search_item_in_store": "بحث عن العنصر في مكتب التمريض...",
-  "write_item_name": "اكتب اسم العنصر",
+  "search_item_in_store": "بحث عن الخدمة في مكتب التمريض...",
+  "write_item_name": "اكتب اسم الخدمة",
   "view_more": "عرض المزيد",
   "news_letter": "رسالة إخبارية",
   "subscribe_to_out_new_channel_to_get_latest_updates": "اشترك في نشرتنا الإخبارية للحصول على آخر التحديثات",
@@ -833,7 +835,7 @@
   "your_food_will_delivered_within": "سيتم انهاء طلبك ",
   "general_info": "معلومات عامة",
   "order_date": "تاريخ الطلب",
-  "item_info": "معلومات العنصر",
+  "item_info": "معلومات الخدمة",
   "hey_welcome_back": "مرحبًا بعودتك!",
   "which_location_do_you_want_to_select": "ما الموقع الذي تريد تحديده؟",
   "use_current_location": "استخدم موقعي الحالي",
@@ -844,7 +846,7 @@
   "driving_license_number": "رقم رخصة القيادة",
   "nid_number": "رقم الهوية الوطنية",
   "estimated_delivery_time": "وقت التسليم المقدر",
-  "this_item_will_be_shown_in_the_user_app_website": "سيتم عرض هذا العنصر في تطبيق المستخدم وموقع الويب",
+  "this_item_will_be_shown_in_the_user_app_website": "سيتم عرض هذه الخدمة في تطبيق المستخدم وموقع الويب",
   "joined": "انضم",
   "how_it_works": "كيف يعمل ؟",
   "you_dont_have_any_saved_address_yet": "ليس لديك أي عنوان محفوظ حتى الآن. يرجى حفظ العنوان أو استخدام موقعك الحالي",
@@ -860,7 +862,7 @@
   "need_cutlery": "بحاجة إلى أدوات طبية",
   "no_need_cutlery": "لا حاجة لأدوات طبية",
   "delivery_instruction": "تعليمات التسليم",
-  "unavailable_item_note": "ملاحظة العنصر غير متوفر",
+  "unavailable_item_note": "ملاحظة الخدمة غير متوفر",
   "delivery_man_information": "معلومات موظف",
   "points_it_will_add_to": "النقاط، ستضيف إلى ولائك بعد إكمال الطلب",
   "6_character": "8+ حرف",
