**fix(i18n): refine order status wording for clarity and flow**
* **AR:**

  * “تم تأكيد الطلب” → “تم قبول الطلب” (`order_confirmed`)
  * “يتم الاعداد” → “تم تأكيد الطلب” (`preparing_item`)

* **EN:**

  * “Order Confirmed” → “Order accepted” (`order_confirmed`)
  * “Preparing Item” → “Order Confirmed” (`preparing_item`)

Improves logical order progression and user comprehension during tracking.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -196,8 +196,8 @@
   "order_racking": "تتبع الطلب",
   "delivery_man": "موظف",
   "order_placed": "تم تقديم الطلب",
-  "order_confirmed": "تم تأكيد الطلب",
-  "preparing_item": "يتم الاعداد",
+  "order_confirmed": "تم قبول الطلب",
+  "preparing_item": "تم تأكيد الطلب",
   "delivery_on_the_way": "في الطريق",
   "view_on_map": "عرض على الخريطة",
   "back_to_home": "العودة إلى الرئيسيه",
