--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -198,8 +198,8 @@
   "order_racking": "Order Tracking",
   "delivery_man": "Nurse",
   "order_placed": "Order Placed",
-  "order_confirmed": "Order Confirmed",
-  "preparing_item": "Preparing Item",
+  "order_confirmed": "Order accepted",
+  "preparing_item": "Order Confirmed",
   "delivery_on_the_way": "On the way",
   "view_on_map": "View on Map",
   "back_to_home": "Back to Home",
