**fix(ar): adjust profile label for better UX consistency**
* Updated Arabic translation of `"profile"` from **"حساب تعريفي"** → **"حسابك"**

Gives a more natural phrasing for end users within the app navigation.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -120,7 +120,7 @@
   "details": "تفاصيل",
   "track_order": "تتبع الطلب",
   "re_order": "إعادة الطلب",
-  "profile": "حساب تعريفي",
+  "profile": "حسابك",
   "message": "رسالة",
   "coupon": "قسيمة",
   "privacy_policy": "سياسة الخصوصية",
