feat(i18n): refine AR/EN copy for payments, availability, and onboarding
* AR:

  * “غير متاح الان” بدل “إنتهى من المخزن”
  * “نقدي” بدل “الدفع عند الاستلام”
  * “أفضل الخدمات التي تمت مراجعتها” بدل “أفضل العناصر…”
  * “انضم كمقدم خدمة” بدل “انضم كموظف”
  * “انضم لفريقنا” بدل “الأرباح”
  * “وسائل الدفع الأخرى” بدل “الدفع عبر الإنترنت”
  * “التحويل اللحظي” بدل “الدفع دون اتصال”
  * “انضم كمكتب تمريض” بدل “فتح مقدم الخدمه”
* EN:

  * “Not available now” بدل “Out of Stock”
  * “Best Reviewed Services” بدل “Best Reviewed Items”
  * “Join as a service provider” بدل “Join as a Nurse”
  * “Join our team” بدل “Earnings”
  * “Other payment methods” بدل “Pay Via Online”
  * “Instant transfer” بدل “Pay Offline”
  * “Join as a partner” بدل “Open Partner”
* نصوص UX إضافية: تحسين أسماء الحقول والعناوين (“Service Name”، “Medical Supplies”، وغيرها)

files:

* `assets/language/ar.json`
* `assets/language/en.json`

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -97,7 +97,7 @@
   "add_to_cart": "أضف إلى سلة الطلبات",
   "item_added_to_cart": "تمت إضافة الخدمة إلى سلة الطلبات",
   "already_added_in_cart": "تمت إضافتها بالفعل في سلة الطلبات",
-  "out_of_stock": "إنتهى من المخزن",
+  "out_of_stock": "غير متاح الان",
   "my_cart": "سلة الطلبات الخاصة بي",
   "removed_from_cart": "تمت إزالتها من سلة الطلبات",
   "enter_promo_code": "أدخل الرمز الترويجي",
@@ -214,7 +214,7 @@
   "item": "الصنف",
   "review_now": "قم بالمراجعة الآن",
   "digital_payment": "الدفع الرقمي",
-  "cash_on_delivery": "الدفع عند الاستلام",
+  "cash_on_delivery": "نقدي",
   "faster_and_safe_way": "طريقة أسرع وأكثر أمانا لإرسال الأموال",
   "pay_your_payment_after_getting_item": "ادفع دفعتك بعد الحصول على المنتج",
   "update_in_cart": "التحديث في سلة الطلبات",
@@ -363,7 +363,7 @@
   "no_review_found": "لم يتم العثور على أي مراجعة",
   "delivery_time": "موعد التسليم",
   "minimum_order": "الحد الأدنى لمبلغ الطلب",
-  "best_reviewed_item": "أفضل العناصر التي تمت مراجعتها",
+  "best_reviewed_item": "أفضل الخدمات التي تمت مراجعتها",
   "search": "بحث",
   "no_internet_connection": "لا يوجد اتصال بالإنترنت",
   "retry": "أعد المحاولة",
@@ -384,7 +384,7 @@
   "min_purchase": "الحد الأدنى للشراء",
   "max_discount": "ماكس الخصم",
   "coupon_code_copied": "تم نسخ رمز القسيمة",
-  "join_as_a_delivery_man": "انضم كموظف",
+  "join_as_a_delivery_man": "انضم كمقدم خدمة",
   "join_as_a_restaurant": "انضم مكتب تمريض",
   "join_as_a_store": "انضم كمتجر",
   "are_you_sure_want_to_delete_address": "هل أنت متأكد أنك تريد حذف العنوان",
@@ -789,7 +789,7 @@
   "general": "عام",
   "promotional_activity": "النشاط الترويجي",
   "my_wallet": "محفظتي",
-  "earnings": "الأرباح",
+  "earnings": "انضم لفريقنا",
   "open_store": "افتح مكتب التمريض",
   "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة موظف",
   "upload_deliveryman_photo": "تحميل صورة \nموظف التوصيل",
@@ -961,10 +961,10 @@
   "code_copied": "تم نسخ الكود!",
   "join_as_store": "انضم كمتجر",
   "cover_image": "صورة الغلاف",
-  "join_as_delivery_man": "انضم كموظف ",
+  "join_as_delivery_man": "انضم كمقدم خدمة ",
   "most_tipped": "الأكثر يميل",
   "click_one_of_the_option_below": "(انقر فوق أحد الخيارات أدناه)",
-  "pay_via_online": "الدفع عبر الإنترنت",
+  "pay_via_online": "وسائل الدفع الأخرى",
   "faster_and_secure_way_to_pay_bill": "(طريقة أسرع وآمنة لدفع الفاتورة)",
   "add_fund_to_wallet": "أضف الصندوق إلى المحفظة",
   "please_provide_transfer_amount": "يرجى تقديم مبلغ التحويل",
@@ -1038,7 +1038,7 @@
   "street": "شارع",
   "set_address": "تعيين العنوان",
   "please_setup_your_delivery_address_first": "يرجى إعداد عنوان التسليم الخاص بك أولاً",
-  "pay_offline": "الدفع دون اتصال",
+  "pay_offline": "التحويل اللحظي",
   "offline_payment": "الدفع دون اتصال بالإنترنت",
   "pay_your_bill_using_the_info": "ادفع فاتورتك باستخدام أي من طرق الدفع أدناه وأدخل المعلومات المطلوبة في النموذج",
   "bank_info": "معلومات البنك",
@@ -1479,7 +1479,7 @@
   "select_vendor_cover_photo": "حدد صورة الغلاف لمقدم الخدمه",
   "set_vendor_location": "تحديد موقع مقدم الخدمه",
   "provide_vendor_information_to_proceed_next": "يرجى تقديم معلومات مقدم الخدمه للمتابعة",
-  "open_vendor": "فتح مقدم الخدمه",
+  "open_vendor": "انضم كمكتب تمريض",
   "write_trip_id": "اكتب معرف الرحلة",
   "coupon_applied_successfully": "تم تطبيق القسيمة بنجاح",
   "trip_booking": "حجز الرحلة",
