--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -99,7 +99,7 @@
   "add_to_cart": "Add To Cart",
   "item_added_to_cart": "Service added to cart",
   "already_added_in_cart": "Already Added in Cart",
-  "out_of_stock": "Out of Stock",
+  "out_of_stock": "Not available now",
   "my_cart": "My Cart",
   "removed_from_cart": "Removed from cart",
   "enter_promo_code": "Enter Promo Code",
@@ -365,7 +365,7 @@
   "no_review_found": "No review found",
   "delivery_time": "Delivery Time",
   "minimum_order": "Minimum Order Amount",
-  "best_reviewed_item": "Best Reviewed Items",
+  "best_reviewed_item": "Best Reviewed Services",
   "search": "Search",
   "no_internet_connection": "No internet connection",
   "retry": "Retry",
@@ -386,7 +386,7 @@
   "min_purchase": "Min Purchase",
   "max_discount": "Max Discount",
   "coupon_code_copied": "Coupon code copied",
-  "join_as_a_delivery_man": "Join as a Nurse",
+  "join_as_a_delivery_man": "Join as a service provider",
   "join_as_a_restaurant": "Join as a Nurse Office",
   "join_as_a_store": "Join as a Store",
   "are_you_sure_want_to_delete_address": "Are you sure want to delete address",
@@ -791,7 +791,7 @@
   "general": "General",
   "promotional_activity": "Promotional Activity",
   "my_wallet": "My Wallet",
-  "earnings": "Earnings",
+  "earnings": "Join our team",
   "open_store": "Open Store",
   "complete_registration_process_to_serve_as_delivery_man": "Complete registration process to serve as nurse",
   "upload_deliveryman_photo": "Upload Nurse \nphoto",
@@ -962,10 +962,10 @@
   "code_copied": "Code copied !",
   "join_as_store": "Join as Store",
   "cover_image": "Cover Image",
-  "join_as_delivery_man": "Join as nurse",
+  "join_as_delivery_man": "Join as a service provider",
   "most_tipped": "Most Tipped",
   "click_one_of_the_option_below": "(click one of the option below)",
-  "pay_via_online": "Pay Via Online",
+  "pay_via_online": "Other payment methods",
   "faster_and_secure_way_to_pay_bill": "(Faster & secure way to pay bill)",
   "add_fund_to_wallet": "Add Fund to Wallet",
   "please_provide_transfer_amount": "Please provide transfer amount",
@@ -1039,7 +1039,7 @@
   "street": "Street",
   "set_address": "Set Address",
   "please_setup_your_delivery_address_first": "Please setup your delivery address first",
-  "pay_offline": "Pay Offline",
+  "pay_offline": "Instant transfer",
   "offline_payment": "Offline Payment",
   "pay_your_bill_using_the_info": "Pay your bill using any of the payment method below and input the required information in the form",
   "bank_info": "Bank Info",
@@ -1480,7 +1480,7 @@
   "select_vendor_cover_photo": "Select Partner cover photo",
   "set_vendor_location": "Set Partner location",
   "provide_vendor_information_to_proceed_next": "Provide Partner information to proceed next",
-  "open_vendor": "Open Partner",
+  "open_vendor": "Join as a partner",
   "write_trip_id": "Write Trip ID",
   "coupon_applied_successfully": "Coupon applied successfully",
   "trip_booking": "Trip booking",
