feat(checkout/payment,i18n): rename “Offline Payment” → “Instant transfer”, tweak labels, and gate delivery options for food module
* i18n (AR/EN):

  * Rename `offline_payment` strings to “التحويل اللحظي” / “Instant transfer”
  * Use “pay_offline” key for AppBar title (“Instant transfer”)
  * Adjust copy: “amount” → “المبلغ الاجمالي”, “most_popular_items” → “الأكثر شهرة” / “Most Popular”
  * Update notes: “offline_payment_note_line_one” to reference instant transfer
* Checkout:

  * `TopSection`: import `AppConstants` and hide delivery type block for `food` module
* Payment:

  * `OfflinePaymentScreen`: AppBar now uses `pay_offline`.

Files:

* `assets/language/ar.json`
* `assets/language/en.json`
* `lib/features/checkout/widgets/top_section.dart`
* `lib/features/payment/screens/offline_payment_screen.dart`

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1039,11 +1039,11 @@
   "set_address": "تعيين العنوان",
   "please_setup_your_delivery_address_first": "يرجى إعداد عنوان التسليم الخاص بك أولاً",
   "pay_offline": "التحويل اللحظي",
-  "offline_payment": "الدفع دون اتصال بالإنترنت",
+  "offline_payment": "التحويل اللحظي",
   "pay_your_bill_using_the_info": "ادفع فاتورتك باستخدام أي من طرق الدفع أدناه وأدخل المعلومات المطلوبة في النموذج",
   "bank_info": "معلومات البنك",
   "pay_on_this_account": "الدفع على هذا الحساب",
-  "amount": "كمية",
+  "amount": "المبلغ الاجمالي",
   "write_your_note": "اكتب ملاحظتك",
   "order_placed_successfully": "جاري تأكيد الدفع",
   "your_payment_has_been_successfully_processed_and_your_order": "تمت معالجة دفعتك بنجاح، وطلبك",
@@ -1070,7 +1070,7 @@
   "limited_time_offer": "عرض لفترة محدودة",
   "mins": "دقيقة",
   "sec": "ثانية",
-  "most_popular_items": "العناصر الأكثر شهرة",
+  "most_popular_items": "الأكثر شهرة",
   "কাছা": "منك",
   "open_now": "مفتوح الآن",
   "item_that_you_love": "خصيصاً لك",
@@ -1118,7 +1118,7 @@
   "currently_your_zone_have_no_permission_to_place_any_order": "حاليا منطقتك ليس لديها إذن لتقديم أي طلب",
   "select_and_deliver": "اختر وتسليم",
   "paid_by": "تدفع بواسطة",
-  "offline_payment_note_line_one": "للدفع دون اتصال بالإنترنت، يتعين عليك دفع الفاتورة من أحد الخيارات أدناه",
+  "offline_payment_note_line_one": "للدفع اللحظي، يتعين عليك دفع الفاتورة من أحد الخيارات أدناه",
   "offline_payment_note_line_two": "احفظ المعلومات الضرورية اللازمة لتحديد الدفع أو تأكيده",
   "offline_payment_note_line_three": "أدخل المعلومات وتابع",
   "please_enter_order_id": "الرجاء إدخال رقم الطلب",
