--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1040,7 +1040,7 @@
   "set_address": "Set Address",
   "please_setup_your_delivery_address_first": "Please setup your delivery address first",
   "pay_offline": "Instant transfer",
-  "offline_payment": "Offline Payment",
+  "offline_payment": "Instant transfer",
   "pay_your_bill_using_the_info": "Pay your bill using any of the payment method below and input the required information in the form",
   "bank_info": "Bank Info",
   "pay_on_this_account": "Pay on this account",
@@ -1071,7 +1071,7 @@
   "limited_time_offer": "Limited Time Offer",
   "mins": "mins",
   "sec": "sec",
-  "most_popular_items": "Most Popular Items",
+  "most_popular_items": "Most Popular",
   "কাছা": "From You",
   "open_now": "Open Now",
   "restaurants_near_you": "nurse offices Near you",
@@ -1120,7 +1120,7 @@
   "currently_your_zone_have_no_permission_to_place_any_order": "Currently your zone have no permission to place any order",
   "select_and_deliver": "Select and Deliver",
   "paid_by": "Paid by",
-  "offline_payment_note_line_one": "To pay offline you have to pay the bill from a option below",
+  "offline_payment_note_line_one": "To pay instant transfer you have to pay the bill from a option below",
   "offline_payment_note_line_two": "Save the necessary information that is necessary to identify or confirmation of the payment",
   "offline_payment_note_line_three": "insert the information and proceed",
   "please_enter_order_id": "Please enter order id",
