feat(checkout/payment,i18n): rename “Offline Payment” → “Instant transfer”, tweak labels, and gate delivery options for food module
* i18n (AR/EN):

  * Rename `offline_payment` strings to “التحويل اللحظي” / “Instant transfer”
  * Use “pay_offline” key for AppBar title (“Instant transfer”)
  * Adjust copy: “amount” → “المبلغ الاجمالي”, “most_popular_items” → “الأكثر شهرة” / “Most Popular”
  * Update notes: “offline_payment_note_line_one” to reference instant transfer
* Checkout:

  * `TopSection`: import `AppConstants` and hide delivery type block for `food` module
* Payment:

  * `OfflinePaymentScreen`: AppBar now uses `pay_offline`.

Files:

* `assets/language/ar.json`
* `assets/language/en.json`
* `lib/features/checkout/widgets/top_section.dart`
* `lib/features/payment/screens/offline_payment_screen.dart`

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -250,8 +250,8 @@
   "unpaid": "غير مدفوعة الأجر",
   "pending": "قيد الانتظار",
   "accepted": "مقبول",
-  "processing": "قيد المعالجة",
-  "confirmed": "تم التأكيد",
+  "processing": "تم تأكيد الطلب",
+  "confirmed": "تم قبول الطلب",
   "handover": "خروج الموظف",
   "picked_up": "في الطريق",
   "delivered": "تم الانتهاء",
