feat(i18n,auth,location): update wording to “service provider / nursing office” and tweak flows
* Localization (AR/EN):

  * Replace “موظف / Nurse” with “مقدم خدمة / service provider” in delivery-man registration, labels, and messages.
  * Rename vendor-related copy to “مكتب تمريض / Nursing office” (name, logo, cover, address, info, preference, VAT, etc.).
* Auth:

  * `DeliverymanRegistrationController`: default `_acceptTerms` back to `true` so terms are accepted by default.
* Location selection:

  * `SelectLocationViewWidget`: remove “Set location” button action (commented out) so the dialog no longer shows that explicit CTA.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -571,16 +571,16 @@
   "login_information": "معلومات تسجيل الدخول",
   "latitude": "خط العرض",
   "longitude": "خط الطول",
-  "add_delivery_man": "إضافة موظف",
-  "enter_delivery_man_first_name": "أدخل الاسم الأول لموظف",
-  "enter_delivery_man_last_name": "أدخل الاسم الأخير لموظف",
-  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لموظف",
-  "enter_delivery_man_phone_number": "أدخل رقم هاتف موظف",
+  "add_delivery_man": "إضافة مقدم خدمة",
+  "enter_delivery_man_first_name": "أدخل الاسم الأول لمقدم الخدمة",
+  "enter_delivery_man_last_name": "أدخل الاسم الأخير لمقدم الخدمة",
+  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لمقدم الخدمة",
+  "enter_delivery_man_phone_number": "أدخل رقم هاتف مقدم الخدمة",
   "enter_a_valid_phone_number": "أدخل رقم هاتف صالحًا",
-  "enter_password_for_delivery_man": "أدخل كلمة المرور لموظف",
-  "enter_delivery_man_identity_number": "أدخل رقم هوية موظف",
-  "upload_delivery_man_image": "تحميل صورة موظف",
-  "delivery_man_registration_successful": "تم تسجيل موظف بنجاح",
+  "enter_password_for_delivery_man": "أدخل كلمة المرور لمقدم الخدمة",
+  "enter_delivery_man_identity_number": "أدخل رقم هوية مقدم الخدمة",
+  "upload_delivery_man_image": "تحميل صورة مقدم الخدمة",
+  "delivery_man_registration_successful": "تم تسجيل مقدم الخدمة بنجاح",
   "store_registration_successful": "تم تسجيل مكتب التمريض بنجاح",
   "passport": "جواز سفر",
   "driving_license": "رخصة القيادة",
@@ -588,10 +588,10 @@
   "identity_type": "نوع الهوية",
   "identity_number": "رقم الهوية",
   "enter_identity_number": "أدخل رقم الهوية",
-  "delivery_man_image": "صورة موظف",
+  "delivery_man_image": "صورة مقدم الخدمة",
   "identity_images": "صور الهوية",
-  "delivery_man_registration": "تسجيل موظف",
-  "delivery_man_type": "نوع موظف",
+  "delivery_man_registration": "تسجيل مقدم خدمة",
+  "delivery_man_type": "نوع مقدم الخدمة",
   "freelancer": "مستقل",
   "salary_based": "على أساس الراتب",
   "find_nearby_store_near_you": "البحث عن مكان قريب \nمتجر قريب منك",
@@ -791,8 +791,8 @@
   "my_wallet": "محفظتي",
   "earnings": "انضم لفريقنا",
   "open_store": "افتح مكتب التمريض",
-  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة موظف",
-  "upload_deliveryman_photo": "تحميل صورة \nموظف التوصيل",
+  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة مقدم الخدمة",
+  "upload_deliveryman_photo": "تحميل صورة \nمقدم الخدمة",
   "select_vehicle_type": "اختر نوع المركبة",
   "upload_identity_image": "تحميل صورة الهوية",
   "8_or_more_character": "8 أو أكثر من الحروف",
@@ -801,7 +801,7 @@
   "1_lower_case": "1 حروف صغيرة",
   "1_special_character": "1 رموز خاصة",
   "provide_valid_password": "توفير كلمة مرور صالحة",
-  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لموظف",
+  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لمقدم الخدمة",
   "provide_store_information_to_proceed_next": "قم بتوفير معلومات مكتب التمريض للمتابعة بعد ذلك",
   "upload_store_logo": "تحميل شعار مكتب التمريض",
   "upload_store_cover": "تحميل غلاف مكتب التمريض",
@@ -1456,29 +1456,29 @@
   "your_cart_is_empty": "سلة الطلبات الخاصة بك فارغة",
   "please_enter_valid_estimate_time": "يرجى إدخال وقت تقديري صالح",
   "payment_failed": "فشل الدفع",
-  "vendor_registration": "تسجيل مقدم الخدمه",
-  "vendor_info": "معلومات مقدمه الخدمه",
-  "join_as_vendor": "الانضمام كمقدم خدمه",
-  "write_vendor_name": "اكتب اسم مقدم الخدمه",
-  "vendor_name": "اسم مقدم الخدمه",
-  "vendor_name_field_is_required": "حقل اسم مقدم الخدمه مطلوب",
-  "vendor_logo": "شعار مقدم الخدمه",
-  "upload_vendor_logo": "رفع شعار مقدم الخدمه",
-  "vendor_cover": "صورة الغلاف لمقدم الخدمه",
-  "upload_vendor_cover": "رفع صورة الغلاف لمقدم الخدمه",
-  "vendor_preference": "تفضيلات مقدم الخدمه",
-  "vendor_vat_tax_field_is_required": "حقل ضريبة القيمة المضافة لمقدم الخدمه مطلوب",
-  "this_info_will_need_for_vendor_app_and_panel_login": "ستكون هذه المعلومات ضرورية لتسجيل الدخول إلى تطبيق ولوحة مقدم الخدمه",
-  "vendor_will_pay": "سيدفع مقدم الخدمه",
-  "run_vendor_by_purchasing_subscription_packages": "قم بتشغيل مقدم الخدمه عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى ميزات لوحة مقدم الخدمه، والتطبيق، والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
-  "vendor_information": "معلومات مقدم الخدمه",
-  "write_vendor_address": "اكتب عنوان مقدم الخدمه",
-  "vendor_address_field_is_required": "حقل عنوان مقدم الخدمه مطلوب",
-  "enter_vendor_name": "أدخل اسم مقدم الخدمه",
-  "select_vendor_logo": "حدد شعار مقدم الخدمه",
-  "select_vendor_cover_photo": "حدد صورة الغلاف لمقدم الخدمه",
-  "set_vendor_location": "تحديد موقع مقدم الخدمه",
-  "provide_vendor_information_to_proceed_next": "يرجى تقديم معلومات مقدم الخدمه للمتابعة",
+  "vendor_registration": "تسجيل مكتب تمريض",
+  "vendor_info": "معلومات مكتب تمريض",
+  "join_as_vendor": "الانضمام كمكتب تمريض",
+  "write_vendor_name": "اكتب اسم مكتب التمريض",
+  "vendor_name": "اسم مكتب التمريض",
+  "vendor_name_field_is_required": "حقل اسم مكتب التمريض مطلوب",
+  "vendor_logo": "شعار مكتب التمريض",
+  "upload_vendor_logo": "رفع شعار مكتب التمريض",
+  "vendor_cover": "صورة الغلاف لمكتب التمريض",
+  "upload_vendor_cover": "رفع صورة الغلاف لمكتب التمريض",
+  "vendor_preference": "تفضيلات مكتب تمريض",
+  "vendor_vat_tax_field_is_required": "حقل ضريبة القيمة المضافة لمكتب التمريض مطلوب",
+  "this_info_will_need_for_vendor_app_and_panel_login": "ستكون هذه المعلومات ضرورية لتسجيل الدخول إلى تطبيق ولوحة مكتب التمريض",
+  "vendor_will_pay": "سيدفع مكتب التمريض",
+  "run_vendor_by_purchasing_subscription_packages": "قم بتشغيل مكتب التمريض عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى ميزات لوحة مكتب التمريض، والتطبيق، والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
+  "vendor_information": "معلومات مكتب التمريض",
+  "write_vendor_address": "اكتب عنوان مكتب التمريض",
+  "vendor_address_field_is_required": "حقل عنوان مكتب التمريض مطلوب",
+  "enter_vendor_name": "أدخل اسم مكتب التمريض",
+  "select_vendor_logo": "حدد شعار مكتب التمريض",
+  "select_vendor_cover_photo": "حدد صورة الغلاف لمكتب التمريض",
+  "set_vendor_location": "تحديد موقع مكتب التمريض",
+  "provide_vendor_information_to_proceed_next": "يرجى تقديم معلومات مكتب التمريض للمتابعة",
   "open_vendor": "انضم كمكتب تمريض",
   "write_trip_id": "اكتب معرف الرحلة",
   "coupon_applied_successfully": "تم تطبيق القسيمة بنجاح",
