--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -573,15 +573,15 @@
   "login_information": "Login Information",
   "latitude": "Latitude",
   "longitude": "Longitude",
-  "add_delivery_man": "Add Nurse",
-  "enter_delivery_man_first_name": "Enter nurse first name",
-  "enter_delivery_man_last_name": "Enter nurse last name",
-  "enter_delivery_man_email_address": "Enter nurse email address",
-  "enter_delivery_man_phone_number": "Enter nurse phone number",
+  "add_delivery_man": "Add service provider",
+  "enter_delivery_man_first_name": "Enter service provider first name",
+  "enter_delivery_man_last_name": "Enter service provider last name",
+  "enter_delivery_man_email_address": "Enter service provider email address",
+  "enter_delivery_man_phone_number": "Enter service provider phone number",
   "enter_a_valid_phone_number": "Enter a valid phone number",
-  "enter_password_for_delivery_man": "Enter password for nurse",
-  "enter_delivery_man_identity_number": "Enter nurse identity number",
-  "upload_delivery_man_image": "Upload nurse image",
+  "enter_password_for_delivery_man": "Enter password for service provider",
+  "enter_delivery_man_identity_number": "Enter service provider identity number",
+  "upload_delivery_man_image": "Upload service provider image",
   "delivery_man_registration_successful": "Nurse registration successful",
   "store_registration_successful": "Partner registration successful",
   "passport": "Passport",
@@ -590,10 +590,10 @@
   "identity_type": "Identity Type",
   "identity_number": "Identity Number",
   "enter_identity_number": "Enter identity number",
-  "delivery_man_image": "Nurse Image",
+  "delivery_man_image": "Service provider Image",
   "identity_images": "Identity Images",
-  "delivery_man_registration": "Nurse Registration",
-  "delivery_man_type": "Nurse Type",
+  "delivery_man_registration": "Service provider Registration",
+  "delivery_man_type": "Service provider Type",
   "freelancer": "Freelancer",
   "salary_based": "Salary Based",
   "find_nearby_store_near_you": "Find Nearby \nPartnerNear You",
@@ -793,8 +793,8 @@
   "my_wallet": "My Wallet",
   "earnings": "Join our team",
   "open_store": "Open Store",
-  "complete_registration_process_to_serve_as_delivery_man": "Complete registration process to serve as nurse",
-  "upload_deliveryman_photo": "Upload Nurse \nphoto",
+  "complete_registration_process_to_serve_as_delivery_man": "Complete registration process to serve as service provider",
+  "upload_deliveryman_photo": "Upload service provider \nphoto",
   "select_vehicle_type": "Select Vehicle Type",
   "upload_identity_image": "Upload Identity Image",
   "8_or_more_character": "8 or more character",
@@ -803,7 +803,7 @@
   "1_lower_case": "1 lower case",
   "1_special_character": "1 special character",
   "provide_valid_password": "Provide valid password",
-  "pick_delivery_man_profile_image": "Pick nurse profile image",
+  "pick_delivery_man_profile_image": "Pick service provider profile image",
   "provide_store_information_to_proceed_next": "Provide store information to proceed next",
   "upload_store_logo": "Upload Partner Logo",
   "upload_store_cover": "Upload Partner Cover",
@@ -1457,29 +1457,29 @@
   "your_cart_is_empty": "Haven’t ordered anything yet?.. Order our care now",
   "please_enter_valid_estimate_time": "Please enter valid estimate time",
   "payment_failed": "Payment Failed",
-  "vendor_registration": "Partner Registration",
-  "vendor_info": "Partner Info",
+  "vendor_registration": "Nursing office Registration",
+  "vendor_info": "Nursing office Info",
   "join_as_vendor": "Join as Vendor",
-  "write_vendor_name": "Write Partner Name",
-  "vendor_name": "Partner Name",
-  "vendor_name_field_is_required": "Partner name field is required",
-  "vendor_logo": "Partner Logo",
-  "upload_vendor_logo": "Upload Partner Logo",
-  "vendor_cover": "Partner Cover",
-  "upload_vendor_cover": "Upload Partner Cover",
-  "vendor_preference": "Partner Preference",
-  "vendor_vat_tax_field_is_required": "Partner VAT Tax field is required",
-  "this_info_will_need_for_vendor_app_and_panel_login": "This info will need for Partner app and panel login",
-  "vendor_will_pay": "Partner will pay",
-  "run_vendor_by_purchasing_subscription_packages": "Run Partner by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
-  "vendor_information": "Partner Information",
-  "write_vendor_address": "Write Partner address",
-  "vendor_address_field_is_required": "Partner address field is required",
-  "enter_vendor_name": "Enter Partner name",
-  "select_vendor_logo": "Select Partner logo",
-  "select_vendor_cover_photo": "Select Partner cover photo",
-  "set_vendor_location": "Set Partner location",
-  "provide_vendor_information_to_proceed_next": "Provide Partner information to proceed next",
+  "write_vendor_name": "Write Nursing office Name",
+  "vendor_name": "Nursing office Name",
+  "vendor_name_field_is_required": "Nursing office name field is required",
+  "vendor_logo": "Nursing office Logo",
+  "upload_vendor_logo": "Upload Nursing office Logo",
+  "vendor_cover": "Nursing office Cover",
+  "upload_vendor_cover": "Upload Nursing office Cover",
+  "vendor_preference": "Nursing office Preference",
+  "vendor_vat_tax_field_is_required": "Nursing office VAT Tax field is required",
+  "this_info_will_need_for_vendor_app_and_panel_login": "This info will need for Nursing office app and panel login",
+  "vendor_will_pay": "Nursing office will pay",
+  "run_vendor_by_purchasing_subscription_packages": "Run Nursing office by purchasing subscription packages. You will have access the features of in vendor panel , app and interaction with user according to the subscription packages.",
+  "vendor_information": "Nursing office Information",
+  "write_vendor_address": "Write Nursing office address",
+  "vendor_address_field_is_required": "Nursing office address field is required",
+  "enter_vendor_name": "Enter Nursing office name",
+  "select_vendor_logo": "Select Nursing office logo",
+  "select_vendor_cover_photo": "Select Nursing office cover photo",
+  "set_vendor_location": "Set Nursing office location",
+  "provide_vendor_information_to_proceed_next": "Provide Nursing office information to proceed next",
   "open_vendor": "Join as a partner",
   "write_trip_id": "Write Trip ID",
   "coupon_applied_successfully": "Coupon applied successfully",
